<resources>
    <string name="sk_app_name" translatable="false">StarKnight VPN</string>
    <string name="sk_app_pinterest" translatable="false">Pinterest</string>
    <string name="sk_app_instagram" translatable="false">Instagram</string>

    <string name="sk_select_the_route">Select The Route</string>
    <string name="sk_disconnected">Disconnected</string>
    <string name="sk_connecting">Connecting</string>
    <string name="sk_connected">Connected</string>
    <string name="sk_status">Status:</string>
    <string name="sk_download">Download</string>
    <string name="sk_upload">Upload</string>
    <string name="sk_ad_desc">Watch Ads And Add Time</string>
    <string name="sk_select_server">Select Server</string>
    <string name="sk_search_server">Search Server</string>
    <string name="sk_application">Application</string>
    <string name="sk_search_application">Search Application</string>
    <string name="sk_mode">Mode</string>
    <string name="sk_global">Global</string>
    <string name="sk_only_browser">Only Browser</string>
    <string name="sk_custom">Custom</string>
    <string name="sk_result">Result</string>
    <string name="sk_settings">Settings</string>
    <string name="sk_recommended">Recommended</string>
    <string name="sk_link_successful">Link Successful</string>
    <string name="sk_link_failure">Link Failure</string>
    <string name="sk_successfully_disconnected">Successfully Disconnected</string>
    <string name="sk_add_connection_time">Add Connection Time</string>
    <string name="sk_add_connection_time_desc">Countdown Using Remaining Time</string>
    <string name="sk_share">Share</string>
    <string name="sk_language">Language</string>
    <string name="sk_privacy">Privacy Policy</string>
    <string name="sk_ok">OK</string>
    <string name="sk_splash_desc">Secure Your World,\nConnect with Confidence</string>
    <string name="sk_loading">Loading…</string>
    <string name="sk_retry_tip">Advertising failure load, Please click retry</string>
    <string name="sk_no">No</string>
    <string name="sk_retry">Retry</string>
    <string name="sk_turn_on_notification">Turn On Notifications</string>
    <string name="sk_notification_tip">High-Quality Dedicated Line Notification Reminder</string>
    <string name="sk_open">Open</string>
    <string name="sk_vpn_permission_denied">Permission denied to create a VPN service</string>
    <string name="sk_invalid_server">Invalid server name</string>
    <string name="sk_service_failed">Failed: </string>
    <string name="sk_reboot_required">Failed to start VPN service. You might need to reboot your
        device.</string>
    <string name="sk_group_default">Ungrouped</string>
    <string name="sk_route_need_vpn">Routing rule %s relies on the VPN to be in effect, so it is
        ignored.</string>
    <string name="sk_update_subscription_warning">Proxy is not connected, are you sure you want to
        continue updating?</string>
    <string name="sk_no_proxies_found_in_subscription">No proxies found in the subscription</string>
    <string name="sk_no_proxies_found">No proxies found in the link</string>
    <string name="sk_no_proxies_found_in_file">No proxies found in the file</string>
    <string name="sk_plugin_unknown">Unknown plugin %s</string>
    <string name="sk_connection_test_timeout">Timeout</string>
    <string name="sk_connection_test_refused">Connection refused</string>
    <string name="sk_error">Error</string>
    <string name="sk_profile_empty">Please select a profile</string>
    <string name="sk_service_vpn">VPN Service</string>
    <string name="sk_open_app_manage_link">Open your app to manage your connection</string>
    <string name="sk_no_content">No content~</string>
    <string name="sk_ip_not_support_tip">According to the regulations of mainland China, the current country/region is not supported</string>
    <string name="sk_connect_notify_tip">Tap to get time and reconnect</string>
    <string name="sk_speed_test">Speed Test</string>
    <string name="sk_speed_test_result">Speed Test Result</string>
    <string name="sk_speed_test_in_progress">Speed Test In Progress</string>

    <string name="sk_notify_desc_1724">🔥 Want’s soft glow, tap to fan!</string>
    <string name="sk_notify_act_1724">Fan</string>
    <string name="sk_notify_desc_1725">💋 Whispered heat, lean to catch!</string>
    <string name="sk_notify_act_1725">Catch</string>
    <string name="sk_notify_desc_1726">👀 Glimpse of silk, click to trace!</string>
    <string name="sk_notify_act_1726">Trace</string>
    <string name="sk_notify_desc_1727">💖 Warmth of breath, edge to feel!</string>
    <string name="sk_notify_act_1727">Feel</string>
    <string name="sk_notify_desc_1728">🔥 Hidden spark, peel to find!</string>
    <string name="sk_notify_act_1728">Find</string>
    <string name="sk_notify_desc_1729">💃 Sway of charm, grab to hold!</string>
    <string name="sk_notify_act_1729">Hold</string>
    <string name="sk_notify_desc_1730">👄 Tempting pout, tap to melt!</string>
    <string name="sk_notify_act_1730">Melt</string>
    <string name="sk_notify_desc_1731">💖 Secret shiver, stir to wake!</string>
    <string name="sk_notify_act_1731">Wake</string>
    <string name="sk_notify_desc_1732">🔥 Slow burn of crave, stoke now!</string>
    <string name="sk_notify_act_1732">Stoke</string>
    <string name="sk_notify_desc_1733">💋 Brush of lips, pull to keep!</string>
    <string name="sk_notify_act_1733">Keep</string>
    <string name="sk_notify_desc_1734">👀 Glimpse of sin, chase fast!</string>
    <string name="sk_notify_act_1734">Chase</string>
    <string name="sk_notify_desc_1735">💖 Soft spark of heat, fan to flame!</string>
    <string name="sk_notify_act_1735">Flame</string>
    <string name="sk_notify_desc_1736">🔥 Warm breath tickle, lean to feel!</string>
    <string name="sk_notify_act_1736">Feel</string>
    <string name="sk_notify_desc_1737">💃 Tempting waist, trace to crave!</string>
    <string name="sk_notify_act_1737">Crave</string>
    <string name="sk_notify_desc_1738">👄 Whispered want, click to answer!</string>
    <string name="sk_notify_act_1738">Answer</string>
    <string name="sk_notify_desc_1739">💖 Hidden glow, rub to ignite!</string>
    <string name="sk_notify_act_1739">Ignite</string>
    <string name="sk_notify_desc_1740">🔥 Slow light tease, peel to see!</string>
    <string name="sk_notify_act_1740">See</string>
    <string name="sk_notify_desc_1741">💋 Faint kiss hint, reach to claim!</string>
    <string name="sk_notify_act_1741">Claim</string>
    <string name="sk_notify_desc_1742">👀 Glow of crave, tap to deepen!</string>
    <string name="sk_notify_act_1742">Deepen</string>
    <string name="sk_notify_desc_1743">💖 Warmth of tease, hold to savor!</string>
    <string name="sk_notify_act_1743">Savor</string>
    <string name="sk_notify_desc_1744">🔥 Secret flame of want, fan now!</string>
    <string name="sk_notify_act_1744">Fan</string>
    <string name="sk_notify_desc_1745">💃 Sway of sin, grab to pull!</string>
    <string name="sk_notify_act_1745">Pull</string>
    <string name="sk_notify_desc_1746">👄 Teasing smile, tap to melt!</string>
    <string name="sk_notify_act_1746">Melt</string>
    <string name="sk_notify_desc_1747">💖 Soft shiver of need, stir to heat!</string>
    <string name="sk_notify_act_1747">Heat</string>
    <string name="sk_notify_desc_1748">🔥 Slow burn of allure, stoke to blaze!</string>
    <string name="sk_notify_act_1748">Blaze</string>
    <string name="sk_notify_desc_1749">💋 Whispered crave, lean to catch!</string>
    <string name="sk_notify_act_1749">Catch</string>
    <string name="sk_notify_desc_1750">👀 Glint of heat, click to chase!</string>
    <string name="sk_notify_act_1750">Chase</string>
    <string name="sk_notify_desc_1751">💖 Warm spark of want, rub to flame!</string>
    <string name="sk_notify_act_1751">Flame</string>
    <string name="sk_notify_desc_1752">🔥 Faint breath warmth, reach to feel!</string>
    <string name="sk_notify_act_1752">Feel</string>
    <string name="sk_notify_desc_1753">💃 Tempting line, trace to want!</string>
    <string name="sk_notify_act_1753">Want</string>
    <string name="sk_notify_desc_1754">👄 Whispered need, tap to answer!</string>
    <string name="sk_notify_act_1754">Answer</string>
    <string name="sk_notify_desc_1755">💖 Hidden heat, peel to wake!</string>
    <string name="sk_notify_act_1755">Wake</string>
    <string name="sk_notify_desc_1756">🔥 Slow light hint, click to see!</string>
    <string name="sk_notify_act_1756">See</string>
    <string name="sk_notify_desc_1757">💋 Kiss hint soft, grab to claim!</string>
    <string name="sk_notify_act_1757">Claim</string>
    <string name="sk_notify_desc_1758">👀 Desire’s glow, tap to deepen!</string>
    <string name="sk_notify_act_1758">Deepen</string>
    <string name="sk_notify_desc_1759">💖 Tease’s warmth, hold to keep!</string>
    <string name="sk_notify_act_1759">Keep</string>
    <string name="sk_notify_desc_1760">🔥 Want’s secret flame, fan to burn!</string>
    <string name="sk_notify_act_1760">Burn</string>
    <string name="sk_notify_desc_1761">💃 Temptation’s sway, pull to close!</string>
    <string name="sk_notify_act_1761">Close</string>
    <string name="sk_notify_desc_1762">👄 Smirk’s heat, tap to melt!</string>
    <string name="sk_notify_act_1762">Melt</string>
    <string name="sk_notify_desc_1763">💖 Need’s soft shiver, stir to heat!</string>
    <string name="sk_notify_act_1763">Heat</string>
    <string name="sk_notify_desc_1764">🔥 Allure’s slow burn, stoke to roar!</string>
    <string name="sk_notify_act_1764">Roar</string>
    <string name="sk_notify_desc_1765">💋 Crave’s whisper, lean to catch!</string>
    <string name="sk_notify_act_1765">Catch</string>
    <string name="sk_notify_desc_1766">👀 Sin’s glint, click to chase!</string>
    <string name="sk_notify_act_1766">Chase</string>
    <string name="sk_notify_desc_1767">💖 Spark of want, tap to grow!</string>
    <string name="sk_notify_act_1767">Grow</string>
    <string name="sk_notify_desc_1768">🔥 Tease’s heat, peel to take!</string>
    <string name="sk_notify_act_1768">Take</string>
    <string name="sk_notify_desc_1769">💋 Whispered charm, lean to keep!</string>
    <string name="sk_notify_act_1769">Keep</string>
    <string name="sk_notify_desc_1770">👀 Soft skin glow, click to trace!</string>
    <string name="sk_notify_act_1770">Trace</string>
    <string name="sk_notify_desc_1771">💖 Warm want’s spark, rub to roar!</string>
    <string name="sk_notify_act_1771">Roar</string>
    <string name="sk_notify_desc_1772">🔥 Desire’s flicker, tap to blaze!</string>
    <string name="sk_notify_act_1772">Blaze</string>
    <string name="sk_notify_desc_1773">💋 Tease’s whisper, lean to crave!</string>
    <string name="sk_notify_act_1773">Crave</string>
</resources>