<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="311dp"
        android:layout_height="190dp"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:background="@drawable/sk_r_white_corner_16"
        >
        
        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/sk_ic_warn"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="12dp"
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="#181F21"
            android:text="@string/sk_retry_tip"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            android:gravity="center_horizontal">
            <TextView
                android:id="@+id/noBtn"
                android:layout_width="131dp"
                android:layout_height="40dp"
                android:gravity="center"
                android:textColor="#29C8A2"
                android:textSize="16sp"
                android:text="@string/sk_no"
                android:background="@drawable/sk_button_type_5"
                />

            <TextView
                android:id="@+id/retryBtn"
                android:layout_width="131dp"
                android:layout_height="40dp"
                android:layout_marginStart="8dp"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:text="@string/sk_retry"
                android:background="@drawable/sk_button_type_4"
                />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>