<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/titleRl"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/backIv"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/sk_ic_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/sk_application"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/searchLl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/sk_search_bg"
        android:paddingStart="16dp"
        android:paddingEnd="8dp"
        app:layout_constraintTop_toBottomOf="@+id/titleRl">

        <EditText
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/sk_search_application"
            android:textColor="@color/white"
            android:textColorHint="#BFC2CDDC"
            android:textSize="14sp" />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:padding="8dp"
            android:src="@drawable/sk_ic_search" />
    </LinearLayout>

    <!-- mode -->
    <LinearLayout
        android:id="@+id/modeLl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/searchLl">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sk_mode"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/globalLl"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="16dp"
            android:background="@drawable/sk_application_item_bg">
            <ImageView
                android:id="@+id/globalIv"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="30dp"
                android:src="@drawable/sk_ic_select_default"
                />

            <TextView
                android:id="@+id/globalTv"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:text="@string/sk_global"
                android:layout_marginStart="16dp"/>

            <ImageView
                android:id="@+id/globalCheckIv"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="20dp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/onlyBrowserLl"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="16dp"
            android:background="@drawable/sk_application_item_bg">
            <ImageView
                android:id="@+id/onlyBrowserIv"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="30dp"
                android:src="@drawable/sk_ic_select_default"
                />

            <TextView
                android:id="@+id/onlyBrowserTv"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:text="@string/sk_only_browser"
                android:layout_marginStart="16dp"/>

            <ImageView
                android:id="@+id/onlyBrowserCheckIv"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="20dp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/customLl"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="16dp"
            android:background="@drawable/sk_application_item_bg">
            <ImageView
                android:id="@+id/customIv"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="30dp"
                android:src="@drawable/sk_ic_select_default"
                />

            <TextView
                android:id="@+id/customTv"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:text="@string/sk_custom"
                android:layout_marginStart="16dp"/>

            <ImageView
                android:id="@+id/customCheckIv"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="20dp"/>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>