<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:fitsSystemWindows="true"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:id="@+id/titleRl"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/backIv"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/sk_ic_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/sk_result"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </RelativeLayout>

    <!-- link successfully / link failure -->
    <LinearLayout
        android:id="@+id/linkSuccessOrFailLl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/titleRl"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:visibility="gone"
        tools:visibility="visible">

        <ImageView
            android:id="@+id/linkSuccessOrFailIv"
            android:layout_width="180dp"
            android:layout_height="180dp"
            />
        
        <TextView
            android:id="@+id/linkSuccessOrFailTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:text="@string/sk_link_successful"/>

        <LinearLayout
            android:id="@+id/extraFunLl"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="30dp"
            android:visibility="gone">

            <LinearLayout
                android:id="@+id/speedTestBtn"
                android:layout_width="158dp"
                android:layout_height="56dp"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:background="@drawable/sk_button_type_6"
                >
                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/sk_ic_speed_test"
                    android:layout_marginStart="15dp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="14dp"
                    android:textSize="14sp"
                    android:textColor="@color/white"
                    android:text="@string/sk_speed_test"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/selectServerBtn"
                android:layout_width="158dp"
                android:layout_height="56dp"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginStart="12dp"
                android:background="@drawable/sk_button_type_6"
                >
                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/sk_ic_earth_white"
                    android:layout_marginStart="15dp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="14dp"
                    android:textSize="14sp"
                    android:textColor="@color/white"
                    android:text="@string/sk_select_server"/>

            </LinearLayout>
        </LinearLayout>
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            android:paddingVertical="3dp"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/sk_recommended"
            android:textSize="14sp"
            android:textColor="#070D09"
            android:visibility="gone"
            android:background="@drawable/sk_rect_white_c_4"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="86dp"
            android:layout_marginTop="14dp"
            android:visibility="gone"/>
    </LinearLayout>

    <!-- disconnected -->
    <LinearLayout
        android:id="@+id/disconnectedLl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/titleRl"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_marginTop="30dp">

        <ImageView
            android:id="@+id/disconnectedIv"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:src="@drawable/sk_ic_result_link_disconnect"
            />

        <TextView
            android:id="@+id/disconnectedTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/sk_successfully_disconnected"
            android:textSize="16sp"
            android:textColor="@color/white"/>

        <LinearLayout
            android:id="@+id/adTimeLl"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="84dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:visibility="gone"
            android:background="@drawable/sk_button_type_1">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/sk_ic_ad_1"
                android:layout_marginStart="48dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="12dp"
                android:gravity="center_vertical"
                android:orientation="vertical"
                app:layout_constraintStart_toEndOf="@id/downloadIv">

                <TextView
                    android:id="@+id/adTimeTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="+20 mins"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/adDescTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    android:text="@string/sk_ad_desc" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <com.s.k.starknight.ad.display.NativeAdViewWrapper
        android:id="@+id/nativeAdWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>